deploy/components/shpyrd/base/webhook.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: MutatingWebhookConfiguration
metadata:
  name: shpyrd-build-pods
  annotations:
    cert-manager.io/inject-ca-from: ${SHPYRD_SYSTEM_NS}/shpyrd-webhook-tls
webhooks:
  - name: build-pods.shpyrd.io
    admissionReviewVersions: [v1]
    sideEffects: None
    failurePolicy: Fail
    timeoutSeconds: 10
    matchPolicy: Equivalent
    clientConfig:
      service:
        name: shpyrd-server
        namespace: ${SHPYRD_SYSTEM_NS}
        port: 9443
        path: /webhooks/build-pod
    rules:
      - apiGroups: [""]
        apiVersions: [v1]
        operations: [CREATE]
        resources: [pods]
        scope: Namespaced
    objectSelector:
      matchExpressions:
        - key: kpack.io/build
          operator: Exists
    namespaceSelector:
      matchExpressions:
        - key: shpyrd.io/project
          operator: Exists
